[package]
name = "tulipv2-sdk-lending"
version = "0.9.21"
edition = "2021"
authors = ["Tulip Protocol"]
description = "lending instructions for v1 lending"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-vaults"
readme = "../README.md"

[dependencies]
anchor-lang = "=0.25.0"
anchor-spl = "=0.25.0"
tulipv2-sdk-common = { path = "../common" }
itertools = "0.10.5"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"

[dev-dependencies]
proptest = "1.0.0"
anchor-client = "=0.25.0"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"