[package]
name = "tulipv2-sdk-levfarm"
version = "0.9.22"
edition = "2021"
authors = ["Tulip Protocol"]
description = "farm instructions for v1 leveraged yield farming"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-vaults"
readme = "../README.md"

[dependencies]
tulipv2-sdk-common = { path = "../common" }
itertools = "0.10.5"
num-derive = "0.3"
thiserror = "1.0"
num-traits = "0.2"
anchor-lang = "=0.25.0"
anchor-spl = "=0.25.0"
static-pubkey = "1.0.3"
sighashdb = "0.1.39"

[dev-dependencies]
proptest = "1.0.0"
anchor-client = "=0.25.0"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"

[features]
default = [
    "orca-orcausdc-levfarm",
    "orca-solusdc-levfarm",
    "orca-gmtusdc-levfarm",
    "orca-solusdt-levfarm",
    "orca-shdwusdc-levfarm",
    "orca-atlasusdc-levfarm",
    "orca-orcasol-levfarm",
    "orca-polisusdc-levfarm",
    "orca-samousdc-levfarm",
    "orca-basisusdc-levfarm",
    "orca-whethusdc-levfarm",
    "orca-stsolusdc-levfarm",
    "orca-whethsol-levfarm",
    "orca-gstusdc-levfarm",
    "orca-shdwsol-levfarm",
    "ray-rayusdc-levfarm",
    "ray-solusdcray-levfarm",
    "ray-solusdt-levfarm",
    "ray-geneusdc-levfarm",
    "ray-raysol-levfarm",
    "ray-generay-levfarm",
    "ray-walephusdc-levfarm",
    "ray-dflusdc-levfarm",
    "ray-samoray-levfarm",
    "ray-whethsol-levfarm",
    "ray-raywheth-levfarm",
    "ray-rayusdt-levfarm",
    "ray-stsolusdc-levfarm",
    "ray-msolusdc-levfarm",
    "ray-atlasray-levfarm",
    "ray-stsolusdt-levfarm",
    "ray-whethusdc-levfarm",
    "ray-rayeth-levfarm",
    "ray-polisray-levfarm",
    "ray-likeusdc-levfarm",
    "ray-realusdc-levfarm",
    "ray-mbsusdc-levfarm",
    "ray-ethstsol-levfarm",
    "ray-slclusdc-levfarm",
    "ray-btcstsol-levfarm",
    "ray-msolusdt-levfarm",
    "ray-starsusdc-levfarm",
    "ray-prismusdc-levfarm",
    "ray-raysrm-levfarm"
]
orca-orcausdc-levfarm = []
orca-solusdc-levfarm = []
orca-gmtusdc-levfarm = []
orca-solusdt-levfarm = []
orca-shdwusdc-levfarm = []
orca-atlasusdc-levfarm = []
orca-orcasol-levfarm = []
orca-polisusdc-levfarm = []
orca-samousdc-levfarm = []
orca-basisusdc-levfarm = []
orca-whethusdc-levfarm = []
orca-stsolusdc-levfarm = []
orca-whethsol-levfarm = []
orca-gstusdc-levfarm = []
orca-shdwsol-levfarm = []
ray-rayusdc-levfarm = []
ray-solusdcray-levfarm = []
ray-solusdt-levfarm = []
ray-geneusdc-levfarm = []
ray-raysol-levfarm = []
ray-generay-levfarm = []
ray-walephusdc-levfarm = []
ray-dflusdc-levfarm = []
ray-samoray-levfarm = []
ray-whethsol-levfarm = []
ray-raysrm-levfarm = []
ray-raywheth-levfarm = []
ray-rayusdt-levfarm = []
ray-stsolusdc-levfarm = []
ray-msolusdc-levfarm = []
ray-atlasray-levfarm = []
ray-stsolusdt-levfarm = []
ray-whethusdc-levfarm = []
ray-rayeth-levfarm = []
ray-polisray-levfarm = []
ray-likeusdc-levfarm = []
ray-realusdc-levfarm = []
ray-mbsusdc-levfarm = []
ray-ethstsol-levfarm = []
ray-slclusdc-levfarm = []
ray-btcstsol-levfarm = []
ray-msolusdt-levfarm = []
ray-starsusdc-levfarm = []
ray-prismusdc-levfarm = []