[package]
name = "tulipv2-sdk-vaults"
version = "0.9.22"
edition = "2021"
authors = ["Tulip Protocol"]
description = "vault account types, and vault instructions used by the v2 sdk"
keywords = ["solana", "anchor", "tulip-protocol"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/tulipv2-sdk-vaults"
readme = "../README.md"

[dependencies]
anchor-lang = "=0.25.0"
anchor-spl = "=0.25.0"
tulipv2-sdk-common = { path = "../common" }
static-pubkey = "1.0.3"
type-layout = "0.2.0"
tulip-arrform = "0.1.2"
tulip-derivative = "2.2.1"
itertools = "0.10.5"
tulipv2-sdk-farms = { path = "../farms" }
sighashdb = "0.1.39"
so-defi-atrix = "0.1.16"
bytemuck = "1.12.3"

[dev-dependencies]
proptest = "1.0.0"
anchor-client = "=0.25.0"
data-encoding = "2.3.2"
ring = "0.16.20"
type-layout = "0.2.0"

[features]
default = ["production"]
# activate staging features where applicable
staging = []
production = []
localnet = []